breaks when text is inserted into the html from the json

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="en">
+    <html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Website Travel</title>
+        <title>Website de viajes</title>
     </head>
     <body>
         <header class="header" id="header">
@@ -40,7 +40,7 @@
 
                     <div class="nav__dark">
                         <!-- Theme change button -->
-                        <span class="change-theme-name">Dark mode</span>
+                        <span class="change-theme-name--light change-theme-name--dark">mode</span>
                         <i class="ri-moon-line change-theme" id="theme-button"></i>
                     </div>
 
@@ -80,7 +80,7 @@
 
                     <div class="home__info">
                         <div>
-                            <span class="home__info-title">HOME_INFO-TITLE</span>
+                            <span class="home__info-title">es este?</span>
                             <a href="" class="button button--flex button--link home__info-button">
                                 Más<i class="ri-arrow-right-line"></i>
                             </a>
@@ -120,7 +120,7 @@
             <section class="discover section" id="discover">
                 <h2 class="section__title">Discover the most <br> attractive places</h2>
                 
-                <div class="discover__container container swiper-container">
+                <div class="discover__container container swiper">
                     <div class="swiper-wrapper">
                         <!--==================== DISCOVER 1 ====================-->
                         <div class="discover__card swiper-slide">
@@ -236,7 +236,7 @@
                                 <span class="place__subtitle">Indonesia</span>
                                 <span class="place__price">$2499</span>
                             </div>
-                        </div>
+                        </div> 
 
                         <button class="button button--flex place__button">
                             <i class="ri-arrow-right-line"></i>
@@ -447,7 +447,7 @@
                 </div>
 
                 <div class="footer__rights">
-                    <p class="footer__copy">&#169; 2021 Bedimcode. All rigths reserved.</p>
+                    <p class="footer__copy">&#169; 2022 Francisco Sciarretta</p>
                     <div class="footer__terms">
                         <a href="#" class="footer__terms-link">Terms & Agreements</a>
                         <a href="#" class="footer__terms-link">Privacy Policy</a>
@@ -469,5 +469,6 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+  
     </body>
 </html>
