Text in english, next step also in spanish

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
                 <div class="home__container container grid">
                     <div class="home__data">
-                        <span class="home__data-subtitle">HOME_DATA-SUBTITLE</span>
-                        <h1 class="home__data-title">HOME_DATA-TITLE</h1>
+                        <span class="home__data-subtitle">Discover your place</span>
+                        <h1 class="home__data-title">Explore The <br> Best <b>Beautiful <br> Beaches</b></h1>
                         <a href="#" class="button">Explora</a>
 
                     </div>
@@ -80,9 +80,9 @@
 
                     <div class="home__info">
                         <div>
-                            <span class="home__info-title">es este?</span>
+                            <span class="home__info-title">5 best places to visit</span>
                             <a href="" class="button button--flex button--link home__info-button">
-                                Más<i class="ri-arrow-right-line"></i>
+                                More<i class="ri-arrow-right-line"></i>
                             </a>
                         </div>
 
@@ -97,9 +97,9 @@
             <section class="about section" id="about">
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <h2 class="section__title about__title">ABOUT_TITLE</h2>
+                        <h2 class="section__title about__title">More Information <br> About The Best Beaches</h2>
                         <p class="about__description">
-                            ABOUT_DESCRIPTION
+                            You can find the most beautiful and pleasant places at the best prices with special discounts, you choose the place we will guide you all the way to wait, get your place now.
                         </p>
                         <a href="#" class="button">Reserve a place</a>
                     </div>
